one minor alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@
     background-position:0 -218px;
 }
 .presentation:hover{
-    background-position:0 -168px;
+    background-position:0 -170px;
 }
 .kontakt{
     background-position:0 -312px;
